overlays/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecast-app
  namespace: forecast-app-ns
spec:
  template:
    spec:
      containers:
        - name: forecast-app-container
          image: shopbrain.azurecr.io/forecast:master-8a3e9cb9e81af5fe172125e6ed43afb0d3e4f37d
          resources:
            limits:
              cpu: "2"
              memory: "7Gi"
            requests:
              cpu: "1"
              memory: "3Gi"
          ports:
            - name: http-port
              containerPort: 8000
      imagePullSecrets:
        - name: production-mycontainerregistry-secret
